src/test/ui/const-generics/defaults/generic-expr-default-concrete.stderr
error[E0308]: mismatched types
  --> $DIR/generic-expr-default-concrete.rs:10:5
   |
LL |     Foo::<10, 12>
   |     ^^^^^^^^^^^^^ expected `11`, found `12`
   |
   = note: expected constant `11`
              found constant `12`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
